can automatically add songs with button, added preview link to open youtube

--- a/buddybeats/app/views/playlists/show.html.erb
+++ b/buddybeats/app/views/playlists/show.html.erb
@@ -5,4 +5,4 @@
 <li>Public: <%= @playlist.public %></li>
 <li>Quantity: <%= @playlist.quantity %></li>
 <p>
-  <a href=/songs/new/<%= @playlist.random_hex %>>Add song to playlist</a>
+  <a href=/songs/search/<%= @playlist.random_hex %>>Add song to playlist</a>
