added logout, public playlists

--- a/buddybeats/app/views/accounts/new.html.erb
+++ b/buddybeats/app/views/accounts/new.html.erb
@@ -6,16 +6,16 @@
 <%= inc.label :user_name %>
 <%= inc.text_field :user_name %>
 
-<%= inc.label :user_email %>
+<p><%= inc.label :user_email %>
 <%= inc.text_field :user_email %>
 
-<%= inc.label :password %>
+<p><%= inc.label :password %>
 <%= inc.password_field :password %>
 
-<%= inc.label :password_confirmation %>
+<p><%= inc.label :password_confirmation %>
 <%= inc.password_field :password_confirmation %>
 
-<%= inc.submit %>
+<p><%= inc.submit %>
 
 
 <% end %>
@@ -24,3 +24,5 @@
 <p><hr><p>
 can also do this:
 form_for @account, html: {class: "whatever"} do |inc|
+<p>
+  <%= render "/sessions/login" %>
