--- a/buddybeats/app/views/layouts/application.html.erb
+++ b/buddybeats/app/views/layouts/application.html.erb
@@ -18,6 +18,8 @@
 <ul>
   <li class="navbar"><a href=/playlists>Home</a></li>
   <li class="navbar"><a href=/playlists/mylists>My Playlists</a></li>
+    <li class="navbar"><a href=/playlists/all>Browse Playlists</a></li>
+    <li class="navbar"><a href=/sessions/destroy>Log-out</a></li>
 </ul>
 </footer>
 </html>
