--- a/buddybeats/app/views/playlists/index.html.erb
+++ b/buddybeats/app/views/playlists/index.html.erb
@@ -4,6 +4,6 @@ Would you like to:
 <ul>
   <li><a href=/playlists/new>Create a new playlist?</a></li>
   <li><a href=/playlists/mylists>View your playlists?</a></li>
-  <li>Browse public playlists?</li>
+  <li><a href=/playlists/all>Browse public playlists?</a></li>
   <li>View your song submissions?</li>
 </ul>
