--- a/buddybeats/app/views/playlists/mylists.html.erb
+++ b/buddybeats/app/views/playlists/mylists.html.erb
@@ -5,7 +5,12 @@
 
 <% @playlists.each do |inc| %>
 
-<li>Playlist Title: <a href=/playlists/<%= inc.random_hex %>><%= inc.title %></a> - <a href=/playlists/destroy/<%= inc.id %>>Delete playlist?</a></li>
+<li>Playlist Title: <a href=/playlists/<%= inc.random_hex %>><%= inc.title %></a> - <%= link_to 'Destroy', playlist_path(inc),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %>
+
+
+
 
 
 <% end %>
