--- a/buddybeats/app/views/songs/search.html.erb
+++ b/buddybeats/app/views/songs/search.html.erb
@@ -1,6 +1,8 @@
 
 <h1>testing search functionality</h1>
 <%= @random = params[:random_hex] %>
+<%= @playlist_id = session[:playlist_id] %>
+
 
 <form id="search_form" method="get">
   <input type="text" name="keyword" class="searchbox" placeholder="Search YouTube"></input>
@@ -39,7 +41,9 @@ searchYouTube("britney")
 
           <input type="hidden" name="song[youtube_id]" id="song_youtube_id" value={{= id.videoId }}>
 
-          <input type="hidden" name="song[playlist_id]" id="song_playlist_id" value=<%=@random%>>
+          <input type="hidden" name="song[playlist_id]" id="song_playlist_id" value=<%=@playlist_id%>>
+
+          <input type="hidden" name="song[playlist_hex]" id="song_playlist_hex" value=<%=@random%>>
 
           <input type="hidden" name="song[account_id]" id="song_account_id" value=<%=@current_account.id%>>
 
