--- a/buddybeats/app/views/songs/show.html.erb
+++ b/buddybeats/app/views/songs/show.html.erb
@@ -3,7 +3,7 @@
 <div id="playlistLink">
 
 </div>
-<% @random = session[:random_hex] %>
+<% @random = session[:playlist_hex] %>
 <input type="text" name="playlist_url_share" value="http://localhost:3000/playlists/<%= @random %>" size="40" readonly="readonly" onclick="this.select()">
 
 <%= @idsForPlaylist %>
