can edit playlists

--- a/buddybeats/app/views/layouts/application.html.erb
+++ b/buddybeats/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <img src=/images/buddybeats.png height="100px" id="buddy_logo">
+  <a href=/playlists><img src=/images/buddybeats.png height="100px" id="buddy_logo"></a>
 </head>
 <body>
 <div id="allContent">
