can destroy and edit songs

--- a/buddybeats/app/views/layouts/application.html.erb
+++ b/buddybeats/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
 <ul>
   <li class="navbar"><a href=/playlists>Home</a></li>
   <li class="navbar"><a href=/playlists/mylists>My Playlists</a></li>
+    <li class="navbar"><a href=/songs/mysongs>My Songs</a></li>
     <li class="navbar"><a href=/playlists/all>Browse Playlists</a></li>
     <li class="navbar"><a href=/sessions/destroy>Log-out</a></li>
 </ul>
