--- a/buddybeats/app/assets/stylesheets/application.css
+++ b/buddybeats/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require_self
  */
 
+
 #buddy_logo {
   display: block;
   margin-left: auto;
@@ -25,6 +26,7 @@
 #allContent {
   width: 90%;
   border: 1px black solid;
+  padding: 1em;
   margin-bottom: 1em;
 }
 
