--- a/buddybeats/app/views/playlists/index.html.erb
+++ b/buddybeats/app/views/playlists/index.html.erb
@@ -1,9 +1,8 @@
-<h1>Playlists#index</h1>
 <h1>Welcome, <%= @current_account.user_name %>!</h1>
 Would you like to:
 <ul>
   <li><a href=/playlists/new>Create a new playlist?</a></li>
   <li><a href=/playlists/mylists>View your playlists?</a></li>
   <li><a href=/playlists/all>Browse public playlists?</a></li>
-  <li>View your song submissions?</li>
+  <li><a href=/songs/mysongs>View your song submissions?</a></li>
 </ul>
