--- a/buddybeats/app/views/playlists/mylists.html.erb
+++ b/buddybeats/app/views/playlists/mylists.html.erb
@@ -1,16 +1,21 @@
 <h1>My Playlists</h1>
 
-
-
-
+<ol>
 <% @playlists.each do |inc| %>
 
-<li>Playlist Title: <a href=/playlists/<%= inc.random_hex %>><%= inc.title %></a> - <%= link_to 'Destroy', playlist_path(inc),
+<li><a href=/playlists/<%= inc.random_hex %>><%= inc.title %></a> - <%= link_to 'Destroy', playlist_path(inc),
               method: :delete,
-              data: { confirm: 'Are you sure?' } %> - <%= link_to 'Edit', edit_playlist_path(inc) %>
+              data: { confirm: 'Are you sure you want to delete this playlist?' } %> - <%= link_to 'Edit', edit_playlist_path(inc) %>
 
 
 
 
 
 <% end %>
+</ol>
+<!-- <p><p><a href=/playlists/new>Add New Playlist</a> -->
+
+<p><p>
+<form action="/playlists/new">
+    <input type="submit" value="Add New Playlist">
+</form><p>
