sweetalerts working on myplaylists

--- a/buddybeats/app/views/playlists/mylists.html.erb
+++ b/buddybeats/app/views/playlists/mylists.html.erb
@@ -5,7 +5,7 @@
 
 <li><a href=/playlists/<%= inc.random_hex %>><%= inc.title %></a> - <%= link_to 'Destroy', playlist_path(inc),
               method: :delete,
-              data: { confirm: 'Are you sure you want to delete this playlist?' } %> - <%= link_to 'Edit', edit_playlist_path(inc) %>
+              data: { "sweet-alert-confirm": "Are you sure you want to delete this playlist?" } %> - <%= link_to 'Edit', edit_playlist_path(inc) %>
 
 
 
