--- a/buddybeats/app/views/songs/mysongs.html.erb
+++ b/buddybeats/app/views/songs/mysongs.html.erb
@@ -1,7 +1,7 @@
 <h1>My Songs</h1>
 
 <% @songs.each do |inc| %>
-<li><%= inc.title %></li> - <%= link_to 'Destroy', song_path(inc),
+<li><%= inc.title %> &nbsp;&nbsp;&nbsp; <%= link_to image_tag('delete-icon2.png'), song_path(inc),
               method: :delete,
-              data: { confirm: 'Are you sure?' } %> - <%= link_to 'Edit', edit_song_path(inc) %>
+              data: { "sweet-alert-confirm": "Are you sure you want to delete this song?" } %> &nbsp; <%= link_to image_tag('edit-icon3.png'), edit_song_path(inc) %></li>
 <% end %>
