--- a/buddybeats/app/views/songs/mysongs.html.erb
+++ b/buddybeats/app/views/songs/mysongs.html.erb
@@ -1,7 +1,18 @@
 <h1>My Songs</h1>
 
+<table width=auto>
+  <tr><td></td>
+    <td><strong>Title</strong></td>
+    <td><strong>Date Added</strong></td>
+      <td><strong>Delete or Edit</strong></td>
+  </tr>
 <% @songs.each do |inc| %>
-<li><%= inc.title %> &nbsp;&nbsp;&nbsp; <%= link_to image_tag('delete-icon2.png'), song_path(inc),
+<tr>
+<td><img src="http://img.youtube.com/vi/<%=inc.youtube_id%>/mqdefault.jpg" height="90"></td>
+<td><li><%= inc.title %></td>
+<td><%= inc.created_at.strftime("%m/%d/%Y") %></td>
+<td><%= link_to image_tag('delete-icon2.png'), song_path(inc),
               method: :delete,
-              data: { "sweet-alert-confirm": "Are you sure you want to delete this song?" } %> &nbsp; <%= link_to image_tag('edit-icon3.png'), edit_song_path(inc) %></li>
+              data: { "sweet-alert-confirm": "Are you sure you want to delete this song?" } %> &nbsp; <%= link_to image_tag('edit-icon3.png'), edit_song_path(inc) %></li></td></tr>
 <% end %>
+</table>
