--- a/buddybeats/app/views/layouts/application.html.erb
+++ b/buddybeats/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
 <footer>
 <ul>
   <li class="navbar"><a href=/playlists>Home</a></li>
+  <li class="navbar"><a href=/about>About</a></li>
+
   <li class="navbar"><a href=/playlists/mylists>My Playlists</a></li>
     <li class="navbar"><a href=/songs/mysongs>My Songs</a></li>
     <li class="navbar"><a href=/playlists/all>Browse Playlists</a></li>
