--- a/buddybeats/app/views/playlists/new.html.erb
+++ b/buddybeats/app/views/playlists/new.html.erb
@@ -1,35 +1,28 @@
-<h1>Playlists#new</h1>
-<p>
 <h1>Create Playlist</h1>
 
-<%= form_for @playlist do |inc| %>
+<div class="form-container">
+  <%= form_for @playlist do |inc| %>
 
+    <p><%= inc.label :title %>
+    <%= inc.text_field :title %></p>
 
-<%= inc.label :title %>
-<%= inc.text_field :title %>
+    <p><%= inc.label :description %>
+    <%= inc.text_field :description %></p>
 
-<%= inc.label :description %>
-<%= inc.text_field :description %>
+    <p><%= inc.label :quantity %>
+    <%= inc.number_field :quantity, in: 1.0..10.0 %></p>
 
-<%= inc.radio_button :public, true %>
-<%= inc.label :public_true, "Public" %>
+</div>
 
-<%= inc.radio_button :public, false %>
-<%= inc.label :public_false, "Private" %>
+    <p><%= inc.radio_button :public, true %>
+    <%= inc.label :public_true, "Public" %></p>
 
-<%= inc.label :quantity %>
-<%= inc.number_field :quantity, in: 1.0..10.0 %>
+    <p><%= inc.radio_button :public, false %>
+    <%= inc.label :public_false, "Private" %></p>
 
-<%= inc.hidden_field :account_id, :value => @current_account.id %>
+    <%= inc.hidden_field :account_id, :value => @current_account.id %>
+    <%= inc.hidden_field :random_hex, :value => SecureRandom.hex(5) %>
 
-<%= inc.hidden_field :random_hex, :value => SecureRandom.hex(5) %>
+    <p><%= inc.submit %></p>
 
-
-<%= inc.submit %>
-
-
-<% end %>
-
-<p><hr><p>
-can also do this:
-form_for @account, html: {class: "whatever"} do |inc|
+  <% end %>
