--- a/buddybeats/app/views/songs/mysongs.html.erb
+++ b/buddybeats/app/views/songs/mysongs.html.erb
@@ -1,6 +1,6 @@
 <h1>My Songs</h1>
 
-<table width=auto>
+<table class="table">
   <tr><td></td>
     <td><strong>Title</strong></td>
     <td><strong>Date Added</strong></td>
