--- a/buddybeats/app/views/songs/show.html.erb
+++ b/buddybeats/app/views/songs/show.html.erb
@@ -9,7 +9,12 @@
 <%= @idsForPlaylist %>
   <ol>
 <table class="table">
-
+<tr>
+  <td></td>
+  <td><strong>Title</strong></td>
+  <td><strong>Submitted By</strong></td>
+  <td><strong>Delete</strong></td>
+</tr>
 
 <% @idsForPlaylist = [] %>
 <% @songs.each do |inc| %>
@@ -18,7 +23,7 @@
 <tr>
   <td><img src="http://img.youtube.com/vi/<%=inc.youtube_id%>/mqdefault.jpg" height="90"></td>
   <td><li><%= inc.title %></td>
-  <td>Submitted by: <%= @all_accounts.find(inc.account_id).user_name %> </li></td>
+  <td><%= @all_accounts.find(inc.account_id).user_name %> </li></td>
   <td>
       <%= link_to image_tag('delete-icon2.png'), song_path(inc),
                     method: :delete,
