--- a/buddybeats/app/views/songs/show.html.erb
+++ b/buddybeats/app/views/songs/show.html.erb
@@ -8,7 +8,7 @@
 
 <%= @idsForPlaylist %>
   <ol>
-<table class="table">
+<table class="table table-hover">
 <tr>
   <td></td>
   <td><strong>Title</strong></td>
