--- a/buddybeats/app/views/accounts/new.html.erb
+++ b/buddybeats/app/views/accounts/new.html.erb
@@ -1,6 +1,7 @@
 <div id="register">
 
   <h1>Register</h1>
+  <div class="error"><%= @account_error %><p></div>
   <div class="form-container">
 
     <%= form_for @account do |inc| %>
