--- a/buddybeats/app/views/layouts/application.html.erb
+++ b/buddybeats/app/views/layouts/application.html.erb
@@ -10,14 +10,25 @@
   <header>
       <a href=/playlists><img src=/images/buddybeats.png height="100px" id="buddy_logo"></a>
   </header>
-<div id="allContent">
+  <div class="container">
+    <div class="row">
+      <div id="allContent">
+
+      <div class="center-block">
 
 
 <%= yield %>
 </div>
+</div>
+</div>
+</div>
+
 </body>
+<div class="container">
+  <div class="row">
+    <div class="center-block">
 <footer>
-<ul>
+<ul class="text-center">
   <li class="navbar"><a href=/playlists>Home</a></li>
   <li class="navbar"><a href=/about>About</a></li>
 
@@ -27,4 +38,7 @@
     <li class="navbar"><a href=/sessions/destroy>Log-out</a></li>
 </ul>
 </footer>
+</div>
+</div>
+</div>
 </html>
