--- a/buddybeats/app/views/playlists/about.html.erb
+++ b/buddybeats/app/views/playlists/about.html.erb
@@ -4,3 +4,15 @@
 <p>To get started, try <a href=/playlists/new>creating a new playlist</a>. From there, you can decide if it is public (accessible by anyone who visits BuddyBeats) or private (where you can share the link with friends). By designating the quantity, you are limiting how many songs each user can add to your playlist.</p>
 
 <p>After your playlist has been created, start adding songs! As the owner, there is no limit on how many you can add. When you are done, click the Playlist Link and you can view all of your songs on YouTube.</p>
+
+<p>
+  <h2>Credits</h2>
+</p>
+<p>
+  <ul>
+    <li>Background image courtesy of <a href=https://pixabay.com/en/headphones-headset-audio-technology-690685/>Pixabay</a></li>
+    <li>Logo provided by Simran Khosla</li>
+    <li><a href=https://developers.google.com/youtube/v3/>YouTube Data API</a></li>
+  </ul>
+
+</p>
