--- a/buddybeats/app/views/songs/mysongs.html.erb
+++ b/buddybeats/app/views/songs/mysongs.html.erb
@@ -1,12 +1,20 @@
 <h1>My Songs</h1>
 
+<div id="playlistLink">
+
+</div>
+
 <table class="table table-hover">
   <tr><td></td>
     <td><strong>Title</strong></td>
     <td><strong>Date Added</strong></td>
       <td><strong>Delete or Edit</strong></td>
   </tr>
+  <% @idsForPlaylist = [] %>
+
 <% @songs.each do |inc| %>
+<% @idsForPlaylist.push(inc.youtube_id) %>
+
 <tr>
 <td><img src="http://img.youtube.com/vi/<%=inc.youtube_id%>/mqdefault.jpg" height="90"></td>
 <td><li><%= inc.title %></td>
@@ -16,3 +24,8 @@
               data: { "sweet-alert-confirm": "Are you sure you want to delete this song?" } %> &nbsp; <%= link_to image_tag('edit-icon3.png'), edit_song_path(inc) %></li></td></tr>
 <% end %>
 </table>
+<% @formattedIDS = @idsForPlaylist.join(",") %>
+
+<script type="text/javascript">
+$( "#playlistLink" ).append( "<a href='http://www.youtube.com/watch_videos?video_ids=<%= @formattedIDS %>' target='_blank'>View playlist of all your songs</a>" );
+</script>
