added playlist and song counter to footer

--- a/buddybeats/app/views/layouts/application.html.erb
+++ b/buddybeats/app/views/layouts/application.html.erb
@@ -37,6 +37,7 @@
     <li class="navbar"><a href=/playlists/all>Browse Playlists</a></li>
     <li class="navbar"><a href=/sessions/destroy>Log-out</a></li>
 </ul>
+<p class="text-center"><%= @playlist_count %> playlists and <%= @song_count %> songs added since January 2016</p>
 </footer>
 </div>
 </div>
