--- a/buddybeats/app/views/playlists/edit.html.erb
+++ b/buddybeats/app/views/playlists/edit.html.erb
@@ -39,7 +39,7 @@
 <%= inc.number_field :quantity, in: 1.0..10.0 %>
 
   <p>
-    <%= inc.submit %>
+    <%= inc.submit "Update", :class => 'btn btn-default' %>
   </p>
 
 <% end %>
