--- a/buddybeats/app/assets/stylesheets/bootstrap.css
+++ b/buddybeats/app/assets/stylesheets/bootstrap.css
@@ -4,6 +4,10 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+.table-nonfluid {
+   width: auto !important;
+}
+
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
