--- a/buddybeats/app/views/layouts/application.html.erb
+++ b/buddybeats/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-      <a href=/playlists><img src=/images/buddybeats.png height="100px" id="buddy_logo"></a>
+      <a href=/playlists><img src=/images/buddybeatsgray.png height="100px" id="buddy_logo"></a>
   </header>
   <div class="container">
     <div class="row">
@@ -31,10 +31,10 @@
 <ul class="text-center">
   <li class="navbar"><a href=/playlists>Home</a></li>
   <li class="navbar"><a href=/about>About</a></li>
-
+    <li class="navbar"><a href=/playlists/all>Browse Playlists</a></li>
   <li class="navbar"><a href=/playlists/mylists>My Playlists</a></li>
     <li class="navbar"><a href=/songs/mysongs>My Songs</a></li>
-    <li class="navbar"><a href=/playlists/all>Browse Playlists</a></li>
+
     <li class="navbar"><a href=/sessions/destroy>Log-out</a></li>
 </ul>
 <p class="text-center"><%= @playlist_count %> playlists and <%= @song_count %> songs added since January 2016</p>
