--- a/buddybeats/app/views/playlists/mylists.html.erb
+++ b/buddybeats/app/views/playlists/mylists.html.erb
@@ -17,5 +17,5 @@
 
 <p><p>
 <form action="/playlists/new">
-    <input type="submit" value="Add New Playlist">
+    <input type="submit" value="Add New Playlist" class="btn btn-default">
 </form><p>
