--- a/buddybeats/app/views/playlists/new.html.erb
+++ b/buddybeats/app/views/playlists/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Create Playlist</h1>
+<h1>New Playlist</h1>
 
 <div class="form-container">
   <%= form_for @playlist do |inc| %>
@@ -23,6 +23,6 @@
     <%= inc.hidden_field :account_id, :value => @current_account.id %>
     <%= inc.hidden_field :random_hex, :value => SecureRandom.hex(5) %>
 
-    <p><%= inc.submit %></p>
+    <p><%= inc.submit "Create", :class => 'btn btn-default' %></p>
 
   <% end %>
