--- a/buddybeats/app/views/songs/show.html.erb
+++ b/buddybeats/app/views/songs/show.html.erb
@@ -39,7 +39,7 @@
 <% @formattedIDS = @idsForPlaylist.join(",") %>
 
 <script type="text/javascript">
-$( "#playlistLink" ).append( "<a href='http://www.youtube.com/watch_videos?video_ids=<%= @formattedIDS %>' target='_blank'>Playlist Link</a>" );
+$( "#playlistLink" ).append( "<em>(<%= @idsForPlaylist.length %> songs)</em><p><a href='http://www.youtube.com/watch_videos?video_ids=<%= @formattedIDS %>' target='_blank'>Playlist Link</a>" );
 </script>
 
 <% if !@owner %>
