button on search, turbolinks fix on index page, failed to do google url shortener

--- a/buddybeats/app/views/songs/search.html.erb
+++ b/buddybeats/app/views/songs/search.html.erb
@@ -6,7 +6,7 @@
 
 <form id="search_form" method="get">
   <input type="text" name="keyword" class="searchbox" placeholder="Search YouTube"></input>
-  <button type="submit" value="submit">Submit</button>
+  <button type="submit" value="submit" class="btn btn-default">Submit</button>
 </form>
 
 
@@ -48,7 +48,7 @@ searchYouTube("britney")
 
           <input type="hidden" name="song[account_id]" id="song_account_id" value=<%=@current_account.id%>>
 
-          <input type="submit" name="commit" value="Add Song" />
+          <input type="submit" name="commit" value="Add Song" class="btn btn-primary"/>
 
           </form>
 
