--- a/buddybeats/app/views/songs/search.html.erb
+++ b/buddybeats/app/views/songs/search.html.erb
@@ -1,4 +1,7 @@
 <h1>Search</h1>
+<script>
+var youTubeENV = "<%= ENV['YOUTUBE_API_KEY'] %>"
+</script>
 
 <% @random = params[:random_hex] %>
 <% @playlist_id = session[:playlist_id] %>
