added password reset

--- a/buddybeats/app/views/accounts/new.html.erb
+++ b/buddybeats/app/views/accounts/new.html.erb
@@ -18,7 +18,7 @@
       <p><%= inc.label :password_confirmation %></p>
       <p><%= inc.password_field :password_confirmation %></p>
 
-      <p><%= inc.submit %></p>
+      <p><%= inc.submit "Register", :class => 'btn btn-default' %></p>
 
 
     <% end %>
