--- a/buddybeats/app/views/playlists/about.html.erb
+++ b/buddybeats/app/views/playlists/about.html.erb
@@ -13,6 +13,7 @@
     <li>Background image courtesy of <a href=https://pixabay.com/en/headphones-headset-audio-technology-690685/>Pixabay</a></li>
     <li>Logo provided by Simran Khosla</li>
     <li><a href=https://developers.google.com/youtube/v3/>YouTube Data API</a></li>
+    <li><a href=http://railscasts.com/episodes/274-remember-me-reset-password?view=asciicast>RailsCasts</a>, for password reset</li>
   </ul>
 
 </p>
