--- a/buddybeats/app/views/layouts/application.html.erb
+++ b/buddybeats/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <div id="allContent">
 
       <div class="center-block">
+        <div id=notice><strong><%= notice %></strong></div>
 
 
 <%= yield %>
