--- a/buddybeats/app/views/password_resets/edit.html.erb
+++ b/buddybeats/app/views/password_resets/edit.html.erb
@@ -19,7 +19,7 @@
   <div class="field">
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation %>
-  </div>
+  </div><p>
   <div class="actions"><%= f.submit "Update Password", :class => 'btn btn-default' %></div>
 <% end %>
 </div>
