--- a/buddybeats/app/views/account_mailer/password_reset.html.erb
+++ b/buddybeats/app/views/account_mailer/password_reset.html.erb
@@ -1,5 +1,13 @@
-<h1>AccountMailer#password_reset</h1>
+<h1>Password Reset</h1>
 
 <p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
+  To reset your password, please click the URL below.
+</p>
+
+<p>
+  <%= edit_password_reset_url(@account.password_reset_token) %>
+</p>
+
+<p>
+  If you did not request your password to be reset, please ignore this email and your password will stay as it is.
 </p>
