in process of adding spotify

--- a/buddybeats/app/views/playlists/new.html.erb
+++ b/buddybeats/app/views/playlists/new.html.erb
@@ -14,6 +14,12 @@
 
 </div>
 
+    <p><%= inc.radio_button :platform, "YouTube" %>
+    <%= inc.label :platform_youtube, "YouTube" %></p>
+
+    <p><%= inc.radio_button :platform, "Spotify" %>
+    <%= inc.label :platform_spotify, "Spotify" %></p>
+
     <p><%= inc.radio_button :public, true %>
     <%= inc.label :public_true, "Public" %></p>
 
