--- a/buddybeats/app/views/songs/spotifyshow.html.erb
+++ b/buddybeats/app/views/songs/spotifyshow.html.erb
@@ -1,3 +1,8 @@
+<% if !@owner %>
+<% @deleteDisplay = "display:none" %>
+<% else @deleteDisplay = '' %>
+<% end %>
+
 <h1><%= @playlist_title = session[:playlist_title] %></h1>
 <em><%= @playlist_description = session[:playlist_description] %></em>
 <div id="playlistLink">
@@ -15,7 +20,7 @@
   <td></td>
   <td><strong>Title</strong></td>
   <td><strong>Submitted By</strong></td>
-  <td><strong>Delete</strong></td>
+  <td style="<%= @deleteDisplay %>"><strong>Delete</strong></td>
 </tr>
 
 <% @idsForPlaylist = [] %>
@@ -26,7 +31,7 @@
   <td><img src="<%=inc.spotify_img%>" height="90"></td>
   <td><li><%= inc.title %></td>
   <td><%= @all_accounts.find(inc.account_id).user_name %> </li></td>
-  <td>
+  <td style="<%= @deleteDisplay %>">
       <%= link_to image_tag('delete-icon2.png'), song_path(inc),
                     method: :delete,
                     data: { "sweet-alert-confirm": "Are you sure you want to delete this song?" } %>
@@ -48,14 +53,14 @@
 $( "#playlistLink" ).append( "<em>(<%= @idsForPlaylist.length %> songs)</em><p><a href='https://play.spotify.com/trackset/BuddyBeats/<%= @formattedIDS %>' target='_blank'>Play in Spotify (Web Player)</a>")
 </script>
 
-<% if !@owner %>
-<script type="text/javascript">
-$('.ownerControls').hide();
-</script>
-<% end %>
-
 <% if @songs == [] %>
 <script type="text/javascript">
 $('#fullSongList').hide();
 </script>
 <% end %>
+
+
+
+<!-- <script type="text/javascript">
+  $('.ownerControls').hide();
+</script> -->
