added responsive design to main register/log-in page. a million high fives to myself

--- a/buddybeats/app/assets/stylesheets/application.css
+++ b/buddybeats/app/assets/stylesheets/application.css
@@ -132,3 +132,17 @@ body .ui-tooltip {
   text-align: center;
   /*color: black;*/
 }
+
+#login-small {
+  display: none;
+}
+
+@media (max-width: 700px) {
+  #login {
+    display: none; }
+
+  #login-small {
+    display: block;
+    clear: both;
+    float: left;
+     } }
