--- a/buddybeats/app/views/accounts/new.html.erb
+++ b/buddybeats/app/views/accounts/new.html.erb
@@ -1,3 +1,5 @@
+<meta name='viewport' content='width=device-width, initial-scale=1'>
+
 <div id="register">
 
   <h1>Register</h1>
@@ -26,5 +28,9 @@
 </div>
 
 <div id="login">
+  <%= render "/sessions/login" %>
+</div>
+
+<div id="login-small">
   <%= render "/sessions/login" %>
 </div>
