--- a/buddybeats/app/views/playlists/mylists.html.erb
+++ b/buddybeats/app/views/playlists/mylists.html.erb
@@ -3,7 +3,7 @@
 <ol>
 <% @playlists.each do |inc| %>
 
-<li><a href=/playlists/<%= inc.random_hex %>><%= inc.title %></a> &nbsp;&nbsp;&nbsp; <%= link_to image_tag('delete-icon2.png'), playlist_path(inc),
+<li><a href=/playlists/<%= inc.random_hex %>><%= inc.title %></a> on <%= inc.platform %> &nbsp;&nbsp;&nbsp; <%= link_to image_tag('delete-icon2.png'), playlist_path(inc),
               method: :delete,
               data: { "sweet-alert-confirm": "Are you sure you want to delete this playlist?" } %> &nbsp; <%= link_to image_tag('edit-icon3.png'), edit_playlist_path(inc) %></li>
 
