--- a/buddybeats/app/views/songs/spotifysearch.html.erb
+++ b/buddybeats/app/views/songs/spotifysearch.html.erb
@@ -5,7 +5,7 @@
 
 
 <form id="spotify_search_form" method="get">
-  <input type="text" name="keyword" class="searchbox" placeholder="Search YouTube"></input>
+  <input type="text" name="keyword" class="searchbox" placeholder="Search Spotify"></input>
   <button type="submit" value="submit" class="btn btn-default">Submit</button>
 </form>
 
