--- a/buddybeats/app/views/playlists/about.html.erb
+++ b/buddybeats/app/views/playlists/about.html.erb
@@ -14,6 +14,7 @@
     <li>Logo provided by Simran Khosla</li>
     <li><a href=https://developers.google.com/youtube/v3/>YouTube Data API</a></li>
     <li><a href=https://developer.spotify.com/web-api/>Spotify Web API</a></li>
+    <li><a href=http://t4t5.github.io/sweetalert/>Sweet Alert</a>, through <a href=https://github.com/mois3x/sweet-alert-rails-confirm>sweet-alert-rails-confirm</a></li>
     <li><a href=http://railscasts.com/episodes/274-remember-me-reset-password?view=asciicast>RailsCasts</a>, for password reset</li>
   </ul>
 
